--- a/META.yml
+++ b/META.yml
@@ -1,13 +1,13 @@
 --- #YAML:1.0
 name:                Data-ParseBinary
-version:             0.07
+version:             0.1
 abstract:            Yet Another parser for binary structures
 license:             ~
-generated_by:        ExtUtils::MakeMaker version 6.3201
+author:              
+    - Shmuel Fomberg <owner@semuel.co.il>
+generated_by:        ExtUtils::MakeMaker version 6.42_01
 distribution_type:   module
 requires:     
 meta-spec:
-    url:     http://module-build.sourceforge.net/META-spec-v1.2.html
-    version: 1.2
-author:
-    - Shmuel Fomberg <owner@semuel.co.il>
+    url:     http://module-build.sourceforge.net/META-spec-v1.3.html
+    version: 1.3
