Import of SEMUELF/Data-ParseBinary-0.21 from CPAN.
gitpan-cpan-distribution: Data-ParseBinary
gitpan-cpan-version:      0.21
gitpan-cpan-path:         SEMUELF/Data-ParseBinary-0.21.tar.gz
gitpan-cpan-author:       SEMUELF
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,13 +1,19 @@
 --- #YAML:1.0
-name:                Data-ParseBinary
-version:             0.2
-abstract:            Yet Another parser for binary structures
-license:             ~
-author:              
+name:               Data-ParseBinary
+version:            0.21
+abstract:           Yet Another parser for binary structures
+author:
     - Shmuel Fomberg <owner@semuel.co.il>
-generated_by:        ExtUtils::MakeMaker version 6.42_01
-distribution_type:   module
-requires:     
+license:            unknown
+distribution_type:  module
+configure_requires:
+    ExtUtils::MakeMaker:  0
+requires:  {}
+no_index:
+    directory:
+        - t
+        - inc
+generated_by:       ExtUtils::MakeMaker version 6.48
 meta-spec:
-    url:     http://module-build.sourceforge.net/META-spec-v1.3.html
-    version: 1.3
+    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
+    version:  1.4
